@@ -28,6 +28,7 @@
 13. Create a new SizeGrip class, so that we can force the size-grip on the main
     window to have the same height as toolbuttons - this makes it align to the
     bottom.
+14. Set maximum height of genre combo to toolbutton height.
 
 1.1.3
 -----
